# Sailfish

./: .gitignore  Cargo.toml  README.md
broker/: Cargo.toml  db.sql  setup_db.sh
broker/src/: db.rs  main.rs
consumers/: index.js  package-lock.json  package.json
producers/: index.html
server/: Cargo.toml
server/src/: main.rs
src/: cli.rs  server.rs
src/configs/: consumers.rs  mod.rs  producers.rs  topics.rs
src/subjects/: consumer.rs  event.rs  keys.rs  mod.rs  producer.rs  topic.rs
