[package]
name = "Sailfish"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4"
]

[[bin]]
name = "sailfish"
path = "src/server.rs"

[[bin]]
name = "sailfish-cli"
path = "src/cli.rs"
