[package]
name = "event-streaming-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = "0.4"
actix-cors = "0.5"
r2d2 = "0.8.9"
r2d2_sqlite = "0.19"
rusqlite = "0.26"
serde = { version = "1.0", features = ["derive"] }